# SlicerAIM_MRIRobot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER.md  README.md  SlicerConfig.cmake
NeuroRobot/: CMakeLists.txt
NeuroRobot/include/Kinematics/: Kinematics.hpp  NeuroKinematics.hpp
NeuroRobot/include/NeuroKinematics/: ForwardKinematics.h  NeuroKinematics.hpp
NeuroRobot/include/NeuroRobotKinematics/: NeuroRobotKinematics.hpp
NeuroRobot/include/WorkspaceGeneration/: WorkspaceVisualization.h
NeuroRobot/include/WorkspaceVisualization/: WorkspaceVisualization.hpp
NeuroRobot/src/Kinematics/: NeuroKinematics.cpp
NeuroRobot/src/NeuroKinematics/: ForwardKinematics.cpp  NeuroKinematics.cpp
NeuroRobot/src/NeuroRobotKinematics/: NeuroRobotKinematics.cpp
NeuroRobot/src/WorkspaceGeneration/: WorkspaceVisualization.cxx  main.cpp
NeuroRobot/src/WorkspaceVisualization/: WorkspaceVisualization.cpp
NeuroRobot/tests/: generate_subworkspace_test.cpp  getenv_test.cpp  powercrust_test.cpp
Utilities/: CMakeLists.txt
Utilities/include/PointSetUtilities/: PointSetUtilities.hpp
Utilities/include/SavePointCloudData/: SavePointCloudData.hpp
Utilities/include/debug/: debug.hpp  errorhandler.hpp
Utilities/src/PointSetUtilities/: PointSetUtilities.cpp
Utilities/src/SavePointCloudData/: SavePointCloudData.cpp
Utilities/src/debug/: errorhandler.cpp
Utilities/tests/: debug_test.cpp
WorkspaceGeneration/: CMakeLists.txt  qSlicerWorkspaceGenerationModule.cxx  qSlicerWorkspaceGenerationModule.h  qSlicerWorkspaceGenerationModuleWidget.cxx  qSlicerWorkspaceGenerationModuleWidget.h  qSlicerWorkspaceGenerationModule_old.cxx
WorkspaceGeneration/Logic/: CMakeLists.txt  vtkSlicerWorkspaceGenerationLogic.cxx  vtkSlicerWorkspaceGenerationLogic.h
WorkspaceGeneration/MRML/: CMakeLists.txt  vtkMRMLWorkspaceGenerationNode.cxx  vtkMRMLWorkspaceGenerationNode.h
WorkspaceGeneration/Resources/: qSlicerWorkspaceGenerationModule.qrc
WorkspaceGeneration/Resources/UI/: qSlicerWorkspaceGenerationFooBarWidget.ui  qSlicerWorkspaceGenerationMarkupsFiducialsWidget.ui  qSlicerWorkspaceGenerationModuleWidget.ui  qSlicerWorkspaceGenerationProbeSpecsHelpWidget.ui  qSlicerWorkspaceGenerationProbeSpecsWidget.ui
WorkspaceGeneration/Resources/meshes/: General_Workspace.ply  entry_point_workspace.ply  entry_point_workspace.xyz  mesh_generation_script.mlx
WorkspaceGeneration/Resources/scenes/: testmask-label.nii.seg.nrrd
WorkspaceGeneration/Widgets/: CMakeLists.txt  qSlicerWorkspaceGenerationFooBarWidget.cxx  qSlicerWorkspaceGenerationFooBarWidget.h  qSlicerWorkspaceGenerationMarkupsFiducialsWidget.cxx  qSlicerWorkspaceGenerationMarkupsFiducialsWidget.h  qSlicerWorkspaceGenerationProbeSpecsHelpWidget.cxx  qSlicerWorkspaceGenerationProbeSpecsHelpWidget.h  qSlicerWorkspaceGenerationProbeSpecsWidget.cxx  qSlicerWorkspaceGenerationProbeSpecsWidget.h
WorkspaceVisualization/: CMakeLists.txt  qSlicerWorkspaceVisualizationModule.cxx  qSlicerWorkspaceVisualizationModule.h  qSlicerWorkspaceVisualizationModuleWidget.cxx  qSlicerWorkspaceVisualizationModuleWidget.h
WorkspaceVisualization/Logic/: CMakeLists.txt  WorkspaceVisualization.cxx  WorkspaceVisualization.h  vtkSlicerWorkspaceVisualizationLogic.cxx  vtkSlicerWorkspaceVisualizationLogic.h
WorkspaceVisualization/MRML/: CMakeLists.txt  vtkMRMLWorkspaceVisualizationNode.cxx  vtkMRMLWorkspaceVisualizationNode.h
WorkspaceVisualization/Resources/: qSlicerWorkspaceVisualizationModule.qrc
WorkspaceVisualization/Resources/UI/: qSlicerWorkspaceVisualizationMarkupsFiducialsWidget.ui  qSlicerWorkspaceVisualizationModuleWidget.ui  qSlicerWorkspaceVisualizationProbeSpecsHelpWidget.ui
WorkspaceVisualization/Resources/meshes/: robot_workspace.ply
WorkspaceVisualization/Resources/scenes/: Temp_MRI_head.mrml
WorkspaceVisualization/Widgets/: qSlicerWorkspaceVisualizationMarkupsFiducialsWidget.cxx  qSlicerWorkspaceVisualizationMarkupsFiducialsWidget.h  qSlicerWorkspaceVisualizationProbeSpecsHelpWidget.cxx  qSlicerWorkspaceVisualizationProbeSpecsHelpWidget.h
test_neuro_code/: CMakeLists.txt  main.cpp
